# Texas-RRC-Pipeline

./: README.md  pyproject.toml
txrrc/: __init__.py  api.py  cli.py  config.py  database.py  logging.py  pipeline.py
txrrc/discovery/: catalogue.py
txrrc/fetch/: downloader.py
txrrc/normalize/: ddl.py  ddl.sql  loader.py  mappings.py  validators.py
txrrc/parse/: completions_parser.py  csv_parser.py  ebcdic_parser.py  fixed_parser.py  json_parser.py  router.py
txrrc/parse/layouts/: drilling_permits.yaml  wellbore_dbf900.yaml
txrrc/scheduler/: loop.py
txrrc/tests/: test_completions_parser.py  test_discovery.py  test_ebcdic_parser.py  test_fetch.py  test_fixed_parser.py  test_loader.py
txrrc/utils/: dates.py  ebcdic.py  fixedwidth.py  hashing.py  http.py
